[project]
name = "playground"
version = "0.1.0"
description = ""
authors = [{name = "Alexander Jansing",email = "apjansing@gmail.com"}]
packages = [
    { include = "sequences", from = "src/sequences" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
